commented Levenshtein.java
added comments